# mle-pr-final

./: .dockerignore  .env.example  .gitattributes  .gitignore  Monitoring.md  README.md  pyproject.toml  requirements-runtime.txt  requirements.txt
.github/workflows/: ci.yml
examples/: predict_request.json
ml_models/: model.joblib
notebooks/: 01_eda.ipynb  02_modeling.ipynb
reports/: eda_summary.json  model_comparison.json  model_metadata.json  training_summary.json
scripts/: run_api.sh  run_mlflow.sh  run_stack.sh  smoke_test.sh  stop_stack.sh  train.sh
services/: __init__.py  docker-compose.yaml
services/grafana/dashboards/: bank-api-overview.json
services/grafana/provisioning/dashboards/: default.yml
services/grafana/provisioning/datasources/: prometheus.yml
services/mlflow/: Dockerfile  __init__.py  check_storage.py  entrypoint.sh  requirements.txt
services/prometheus/: alerts.yml  prometheus.yml
services/recomendation_service/: Dockerfile  __init__.py
services/recomendation_service/app/: __init__.py  main.py  predictor.py  schemas.py
src/bank_recommender/: __init__.py  constants.py  data.py  features.py  metrics.py  model.py  train.py
tests/: test_api.py  test_artifact.py  test_data.py  test_metrics.py  test_mlflow_storage.py  test_model.py
