[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-product-recommender"
version = "1.0.0"
description = "Next-month Santander bank product recommendations"
requires-python = ">=3.10,<3.13"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src/bank_recommender", "services/recomendation_service/app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
